fix row spacing, click name, fix pointer

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -15,3 +15,11 @@ html {
   display: block;
   margin: 10px auto;
 }
+
+.btn:hover {
+  cursor: pointer;
+}
+
+.pointer:hover {
+  cursor: pointer;
+}
